--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
     <!-- TODO: Change The title name -->
-    <title>Title</title>
+    <title>قدمگاه آزادی</title>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@saaghi2_0" />
     <!-- TODO: Add the Title for twitter Card -->
-    <meta name="twitter:title" content="" />
+    <meta name="twitter:title" content="قدمگاه آزادی یا زندان فرهنگی؟" />
     <!-- TODO: Add the Description for twitter card  -->
-    <meta name="twitter:description" content="" />
+    <meta name="twitter:description" content="انتظار من این است که این نسل،
+    به سمت روحیه‌ی سازنده، به سمت تفکّر مثبت، همکاری و به سمت ادراک و همسویی با جهانی بهتر بروند." />
     <!-- TODO: Edit the repo-name-here and change it to the reposoitory name. -->
     <!-- TODO: Add the image name to the end -->
-    <meta name="twitter:image" content="https://saaghi2.github.io/repo-name-here/images/" />
+    <meta name="twitter:image" content="https://saaghi2.github.io/ghadamgah/images/freedom-gate.jpg" />
 
 </head>
 
@@ -30,10 +31,95 @@
     </header>
 
     <article>
-        <h2 class="inner-header">عنوان فرعی-مقاله</h2>
+        <h2 class="inner-header">قدمگاه آزادی یا زندان فرهنگی؟</h2>
         <p>
-            متن مقاله:<br>
-            متن مقاله در اینجا اضافه خواهد شد.
+            امروز وسط صحبت با یکی از نزدیکان به این نتیجه رسیدم که ایده‌ی خاصی در ذهن ایرانی‌ها وجود دارد که به استبداد
+            سیاسی منجر می‌شود.<br>
+            اگر از یک فرد بی‌طرف بپرسید دنیا چگونه کار میکند، می‌گوید برای رسیدن از A به C باید ابتدا از A به B برویم و
+            بعد از B به C.<br>
+            این یک ترتیب منطقی و فلسفی است.<br>
+            حالا، اگر بخواهیم به D برویم چکار باید بکنیم؟ ابتدا باید از A به B برویم و بعد از B به C و بعد از C به D. و
+            این سیر همینطور ادامه دارد. یعنی این سلسله مراتب ادامه پیدا می‌کند و ما نهایتاً به مقصد می‌رسیم.<br>
+            البته گفتم فلسفی. بنابراین، شاید بشود گفت که این سیر هیچگاه پایان ندارد و ما همینطور از ایستگاهی به ایستگاه
+            دیگر در زندگی می‌رویم. امّا شاید حس کنید که این یک سیر بی‌پایان است و بالاخره باید ایستگاه آخری وجود داشته
+            باشد؟ جایی که ما برسیم و گوییم بالاخره رسیدیم و تمام شد و اکنون همه چیز داریم.<br>
+            ولی زندگی به ما بارها و بارها نشان داده که دیدگاه نتیجه‌گرا خیلی به درد نمی‌خورد. مخصوصاً بعد از تحولات
+            تکنولوژیک، ما امروز دیگر نمی‌توانیم هیچ سیر طبیعی را با انتهای مشخصی ببینیم. یعنی برای حال و روز خودمان که
+            شده هر چیز را به بخش‌های کوچکتری تقسیم می‌کنیم و برای هدف کوچکتر تلاش می‌کنیم. ولی این روز‌ها ظاهراً هر قدر
+            تلاش می‌کنیم، اوّلا رسیدن به همان هدف‌های کوچکتر سخت شده، و ثانیاً تهدید‌ها از بیرون آنقدر زیاد است که هرقدر
+            ما در هر هدف کوچکتر بیشتر وقت صرف کنیم، خطر نابودی هدف‌های کوچک بعدی و نابودی هدف بزرگتر بیشتر می‌شود و در
+            واقع بین بودن و نبودن تهدید می‌شویم.<br>
+            <br>
+            امّا آیا اوضاع ما همیشه چنین بود؟<br>
+            فکر نمی‌کنم.<br>
+            طبیعتاً بخشی از این مسئله معطوف به سرعت تکنولوژی در خارج از ایران است و توسعه‌ی بی‌امان و نیاز برای تغییر
+            دائمی. این فرمول برای کسانی که در غرب حکم‌رانی می‌کنند کار می‌کند. یک فرمول ابدی است که باعث جلوگیری از
+            فروپاشی و دوام کار می‌شود و برای همین عمیقاً از آن پشتیبانی می‌کنند. البته فقط آن‌ها نیستند. اکثر عقلا نیز
+            بر این مسئله صحه گذاشته‌اند.<br>
+            امّا چرا لبه‌ی تیز تیغ آن در ممالکی با فرهنگ دوگانه مثل ایران بی‌امان‌ حس می‌شود. چرا هر چه که به ما می‌رسد،
+            عملاً ما را در یک تلاش بی‌پایان و تا ابد رها کرده؟<br>
+            توضیح آن بسیار بسیار طولانی است و تصوّر میکنم اکثر خوانندگان این متن‌ها حوصله‌ی چندانی برای متن ۴-۵ صفحه‌ای
+            (صفحه A4) ندارند.<br>
+            بنابراین مجورم خلّاقیت به خرج دهم و از کلمات جدید استفاده کنم.<br>
+            مسئله‌ای که در ابتدای بحث توضیح دادم (رسیدن از A به C) یک نکته‌ی بسیار جالب دارد. برای مثال ما می‌توانیم حال
+            و روز کوته‌فکران را در این معادله به خوبی ببینیم. مثلاً اگر به ما بگویند که C یک final destination است و ما
+            به هدف نهایی در C خواهیم رسید، کسی که دید کوتاهی به دنیا دارد با شدّت و سرعت عجیبی A و B را می‌گذراند تا به
+            C برسد. امّا تصوری که با خود دارد چیست؟<br>
+            اینکه در نقطه‌ی C از تمام مسئولیت‌ها معاف خواهد شد. چون بالاخره به هدف رسیده است دیگر! درسته؟
+            ولی آیا دنیای واقعی چنین است؟ نه!<br>
+            دنیا یک سیر بی‌انتها از پروسه‌های پی در پی و پشت سر هم است. امّا چرا چنین بار عاطفی سنگینی برای نقطه‌ی C
+            تعریف می‌کند؟ اگر در یک وضعیت ضروری بفهمد که باید به نقطه‌ی D نیز برسد، چکار می‌خواهد بکند؟
+            او که تمام انرژی خود را برای A و B صرف کرده و الان مجبور است C را حول حولکی سر و هم بندی کند.
+            اگر کار به E و F و … رسید چی؟<br>
+            به کلّی از پا می‌افتد و مجبور است پناه ببرد به پروپاگاندا! مجبور است کارِ دیگری را خراب کند تا خودش کمتر
+            دیده نشود. خودش کم‌ مهارت‌تر یا نابلد‌تر دیده نشود.<br>
+            چرا این‌ها را می‌گویم؟ چون مهم است!<br>
+            اگر این سیر بارها تکرار شود و تبدیل به یک مسئله‌ی عادی فرهنگی شود چه؟<br>
+            مجبور است یک پروسه‌ی کامل طراحی کند تا از پیشرفت بقیه جلوگیری کند. در واقع، به جای تغییر دیدگاه خود مجبور
+            است برای حرکت بقیه و در نهایت جامعه محدوده و ساز و کار محدود کننده طراحی کند.<br>
+            به نظرم ما دچار چنین مشکلی شده‌ایم!<br>
+            <br>
+            آنچه که این نسل را به این کار واداشته مفهومی به نام قدمگاه یا بارگاه است.<br>
+            <br>
+            قدم‌گاه جایی است که شما فقط کافی است تا رسیدن به آنجا تلاش کنید و در آن مرحله سنگینی بار تمام مسئولیت‌ها از
+            پای شما باز می شود و شما تا ابد آزاد هستید! از آنجا به بعد هر کاری بکنید این فقط بقیه هستند که مسئول کشیدن
+            بار شما هستند و شما تقریباً می‌شود گفت به بارگاه خدا رسیده‌اید! شاید هم بهشت…<br>
+            این دیدگاه را می‌شود در شاخ و برگ‌های مختلف شناسایی کرد.<br>
+            مثلاً یکی از بارزترین‌ها دیدگاه قطعیت‌گرایی دینی است (معمولاً به شکل افراطی ظهور می‌کند)<br>
+            <br>
+            فرقی نمی‌کند در چه شکل و فرمی باشد، به هر حال ما هستیم و یک دیدگاه که به شدّت محدود کننده است! یعنی باید
+            دیگران را محدود کرد چون ممکن است فقط با حرکت دیگران اعتبار ما از بین برود…<br>
+            یک دیدگاه مقایسه‌ای دیوانه وار!!<br>
+            این که نمی‌شود عزیز من…<br>
+            <br>
+            امّا دیدگاه دیگر که در واقع آزادی را تضمین می‌کند، دیدگاه همیشه ادامه‌دار زندگی است.<br>
+            اینکه شما از نقطه‌ای وارد بازی می‌شوید و احتمالا تا زمان مرگ این سیر تغییر و تحول ادامه دارد و چیز غیر عادی
+            در این میان نیست.<br>
+            هیچ جایی با عنوان قدم‌گاه، بارگاه یا هر مقصد نهایی که بشود گفت در آنجا شما از بار تمام مسئولیت‌ها خلاص
+            می‌شوید وجود ندارد و شما لازم است در هر مرحله از خود و کارهای خود مراقبت کنید تا به دیگران بی‌دلیل آسیب
+            نرسد.<br>
+            <br>
+            من به نتیجه رسیده‌ام که ایرانی‌ها به دلیل تفکّر بارگاه یا قدم‌گاه، دچار فرسودگی ذهنی شده‌اند. از تغییر به
+            شدّت حراس دارند و دائماً تلاش می‌کنند همه چیز را در یک محدوده‌ی معین به بند بکشند تا “آینده‌ی خود” را “تضمین
+            کنند!”<br>
+            <br>
+            و این بسیار غمناک است. حقیقاً دردآور است که سرما‌یه‌ی انسانی به این وسعت باید فدای یک دگمای آرمان شهر معیوب
+            نسل خاص بشود. نسلی که به دنبال درِ پشتی بهشت، کشوری را در چاه فاضلاب انداخت و هنوز هم برای رسیدن به آن بهشت
+            دست و پا می‌زند…<br>
+            <br>
+            من معتقدم ما بیشتر از این هستیم. همیشه اعتقاد من این بوده که “ما بیشتر از این هستیم” و حتی یک روز در طول
+            عمرم از این عقیده‌ی خود عقب‌نشینی نکرده‌ام!<br>
+            <br>
+            انتظار من از این نسل این است که به جای چنگ زدن به شاخه‌های یک درخت خشک شده، به سمت روحیه‌ی سازنده، به سمت
+            تفکّر مثبت، همکاری و به سمت ادراک و همسویی با جهانی بروند که ظاهراً درک بهتری از آنچه که هست دارد و این را
+            اثبات
+            کرده.<br>
+            بهترین مدرک همیشه و همیشه تاریخ است. باید به تاریخ رجوع کرد.<br>
+            برای همین هر کسی که خود را به هر دلیل و در هر ظرف زمانی، مبدأ تاریخ معرفی می‌کند دوری کنید. فکری، روحی، و
+            اجتماعی.<br>
+            <br>
+            دوست‌تان دارم.<br>
+            واقعاً!<br>‍
         </p>
     </article>
     <div class="border footnote-border"></div>
