--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             عملاً ما را در یک تلاش بی‌پایان و تا ابد رها کرده؟<br>
             توضیح آن بسیار بسیار طولانی است و تصوّر میکنم اکثر خوانندگان این متن‌ها حوصله‌ی چندانی برای متن ۴-۵ صفحه‌ای
             (صفحه A4) ندارند.<br>
-            بنابراین مجورم خلّاقیت به خرج دهم و از کلمات جدید استفاده کنم.<br>
+            بنابراین مجبورم خلّاقیت به خرج دهم و از کلمات جدید استفاده کنم.<br>
             مسئله‌ای که در ابتدای بحث توضیح دادم (رسیدن از A به C) یک نکته‌ی بسیار جالب دارد. برای مثال ما می‌توانیم حال
             و روز کوته‌فکران را در این معادله به خوبی ببینیم. مثلاً اگر به ما بگویند که C یک final destination است و ما
             به هدف نهایی در C خواهیم رسید، کسی که دید کوتاهی به دنیا دارد با شدّت و سرعت عجیبی A و B را می‌گذراند تا به
