Remove excessive space at the last line

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             اجتماعی.<br>
             <br>
             دوست‌تان دارم.<br>
-            واقعاً!<br>‍
+            واقعاً!
         </p>
     </article>
     <div class="border footnote-border"></div>
