--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             ولی آیا دنیای واقعی چنین است؟ نه!<br>
             دنیا یک سیر بی‌انتها از پروسه‌های پی در پی و پشت سر هم است. امّا چرا چنین بار عاطفی سنگینی برای نقطه‌ی C
             تعریف می‌کند؟ اگر در یک وضعیت ضروری بفهمد که باید به نقطه‌ی D نیز برسد، چکار می‌خواهد بکند؟
-            او که تمام انرژی خود را برای A و B صرف کرده و الان مجبور است C را حول حولکی سر و هم بندی کند.
+            او که تمام انرژی خود را برای A و B صرف کرده و الان مجبور است C را هول هولکی سر و هم بندی کند.
             اگر کار به E و F و … رسید چی؟<br>
             به کلّی از پا می‌افتد و مجبور است پناه ببرد به پروپاگاندا! مجبور است کارِ دیگری را خراب کند تا خودش کمتر
             دیده نشود. خودش کم‌ مهارت‌تر یا نابلد‌تر دیده نشود.<br>
